# thronion

./: .gitignore  CHANGELOG.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  INSTALL.md  LICENSE  README.md  STATUS.md  TECHNICAL_ANALYSIS.md  THRONION_ARCHITECTURE.md  USAGE.md
QRADIANCE-main/: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
QRADIANCE-main/.github/: FUNDING.yml
QRADIANCE-main/examples/: ddos_defense.rs  kuramoto_sync.rs
QRADIANCE-main/src/: lib.rs
QRADIANCE-main/src/core/: dtl.rs  hilbert.rs  metatron.rs  mod.rs
QRADIANCE-main/src/delta/: optimizer.rs
QRADIANCE-main/src/mandorla/: eigenstate.rs  tic.rs
QRADIANCE-main/src/resonance/: absorber.rs  kuramoto.rs
QRADIANCE-main/src/utils/: mod.rs
ophanion-main/: .gitignore  BUILD.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  config.toml  install.sh  ophanion.service
ophanion-main/.github/: FUNDING.yml
ophanion-main/benches/: resonance_bench.rs
ophanion-main/src/: circuit_monitor.rs  config.rs  decision.rs  delta_kernel.rs  gabriel_cell.rs  lib.rs  main.rs  resonance.rs  spectral.rs  threshold.rs  tor_interface.rs
ophanion-main/tests/: integration_test.rs
thronion/: Cargo.toml  thronion.toml
thronion/benches/: resonance_bench.rs
thronion/src/: lib.rs
thronion/src/core/: metatron.rs
thronion/src/delta/: kernel.rs  mod.rs
thronion/src/mandorla/: eigenstate.rs  mod.rs
thronion/src/operators/: hamiltonian.rs  mod.rs  nullpoint.rs  omega5.rs
thronion/src/resonance/: mod.rs  spectrum.rs
thronion/src/service/: mod.rs
thronion/src/thronion/: mod.rs
thronion/src/tor/: mod.rs
thronion/src/utils/: integration.rs  linalg.rs
thronion/tests/: integration_tests.rs
