[package]
name = "qrik"
version = "1.0.0"
edition = "2021"
authors = ["QRIK Team"]
description = "Quantum-Resonant Invariant Kernel - Klassisch implementierbare Quantenresonanz für cybernetic Systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantum-resonant-invariant-kernel/qrik"
keywords = ["quantum", "resonance", "tripolar", "cybersecurity", "synchronization"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.7"
rustfft = "6.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
approx = "0.5"

[[bench]]
name = "resonance_bench"
harness = false

[[example]]
name = "ddos_defense"

[[example]]
name = "kuramoto_sync"
