[package]
name = "ophanion"
version = "1.0.0"
edition = "2021"
authors = ["Sebastian Klemm"]
description = "Resonant Monolith DDoS Protection for Tor Hidden Services"
license = "MIT"
repository = "https://github.com/LashSesh/ophanion"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rustfft = "6.1"
ndarray = "0.15"
num-complex = "0.4"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.5"
parking_lot = "0.12"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "ophanion"
path = "src/main.rs"

[[bench]]
name = "resonance_bench"
harness = false
