[package]
name = "thronion"
version = "1.0.0"
edition = "2021"
authors = ["Thronion Team"]
description = "Quantum-Enhanced DDoS Protection for Tor Hidden Services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LashSesh/thronion"
keywords = ["tor", "ddos", "quantum", "resonance", "cybersecurity"]
categories = ["network-programming", "cryptography"]

[dependencies]
# From QRIK
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.7"
rustfft = "6.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# From Ophanion
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
serde_json = "1.0"
toml = "0.8"
ndarray = "0.15"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
dashmap = "5.5"
parking_lot = "0.12"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
prometheus = "0.13"
lazy_static = "1.4"

# Additional
async-trait = "0.1"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "resonance_bench"
harness = false
